feat-api-base-auth-setup-health-lists

--- a/.env.hostinger.completo
+++ b/.env.hostinger.completo
@@ -29,6 +29,7 @@ MYSQLUSER=u892594395_meufreelas27
 MYSQLPASSWORD=Conselhos9509883
 DATABASE_URL=mysql://u892594395_meufreelas27:Conselhos9509883@localhost:3306/u892594395_meufreelas
 DB_PASSWORD=Conselhos9509883
+DB_AUTO_CREATE=0
 
 # ---- URLs do site e API ----
 API_ORIGIN=https://meufreelas.com.br
