--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,12 @@ jobs:
       - name: install
         working-directory: app
         run: npm ci
+      - name: typecheck
+        working-directory: app
+        run: npm run typecheck
+      - name: lint
+        working-directory: app
+        run: npm run lint
       - name: build
         working-directory: app
         run: npm run build
