--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -120,3 +120,17 @@ jobs:
         if: ${{ secrets.DEPLOY_TOKEN != '' && github.event_name == 'push' }}
         run: |
           curl -sS "https://meufreelas.com.br/api/deploy_pull.php?token=${{ secrets.DEPLOY_TOKEN }}" || true
+      - name: verify-api-health
+        if: ${{ github.event_name == 'push' }}
+        run: |
+          set -e
+          BODY=$(curl -sS "https://meufreelas.com.br/api/health.php")
+          echo "$BODY"
+          echo "$BODY" | grep -q '"ok":true'
+      - name: verify-api-projects
+        if: ${{ github.event_name == 'push' }}
+        run: |
+          set -e
+          BODY=$(curl -sS "https://meufreelas.com.br/api/projects/?page=1&per_page=1")
+          echo "$BODY"
+          echo "$BODY" | grep -q '"ok":true'
