--- a/app/package.json
+++ b/app/package.json
@@ -65,6 +65,7 @@
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3",
     "vite": "^5.1.4",
     "zod": "^3.22.4"
