chore: adicionar VITE_TURNSTILE_SITE_KEY; fix: fallback auto-render Turnstile

--- a/.env.hostinger.completo
+++ b/.env.hostinger.completo
@@ -37,6 +37,7 @@ FRONTEND_URL=https://meufreelas.com.br
 VITE_API_URL=https://meufreelas.com.br/api
 VITE_API_FALLBACK_URL=https://meufreelas.com.br/api
 VITE_APP_DOMAIN=https://meufreelas.com.br
+VITE_TURNSTILE_SITE_KEY=0x4AAAAAACg41dVn4G2LVzTZ
 
 # ---- Ambiente (opcional) ----
 NODE_ENV=production
